# TrabajoGrado

./: CONTRIBUTING.md  README.md  pyproject.toml
RunExamples/: runDT_Kevin.py  runDigitalTwin.py  trainDigitalTwin.py
RunExamples/data/: data_example.csv
RunExamples/example_model/DT_Example/: individual_model.pt  info.csv  scaler_robust.pkl
src/t1dsim_ai/: __init__.py
src/t1dsim_ai/individual/: Batch.py  DigitalTwin.py  ForwardEulerSimulator.py  I_Ind.py  IndividualModel.py  SequenceSelection.py  models.py
src/t1dsim_ai/models/: initSteadyStates.csv  scaler_robust.pkl
src/t1dsim_ai/models/IndividualModel/T1DEXI-01-0102/: individual_model.pt  info.csv
src/t1dsim_ai/models/IndividualModel/T1DEXI-01-0692/: individual_model.pt  info.csv  scaler_robust.pkl
src/t1dsim_ai/models/IndividualModel/T1DEXI-01-0794/: individual_model.pt  info.csv  scaler_robust.pkl
src/t1dsim_ai/models/IndividualModel/T1DEXI-01-0880/: individual_model.pt  info.csv  scaler_robust.pkl
src/t1dsim_ai/models/IndividualModel/T1DEXI-01-1047/: individual_model.pt  info.csv  scaler_robust.pkl
src/t1dsim_ai/models/PopulationModel/: population_model_05022024_epoch_15.pt  scaler_states.pkl
src/t1dsim_ai/population/: CGMOHSUSimStateSpaceModel_V2.py
src/t1dsim_ai/transversal/: Functions.py  WeightClipper.py  options.py
src/t1dsim_ai/utils/: metrics.py  preprocess.py
